--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,128 +1,234 @@
-
+.search_h3{
+    font-family:'微軟正黑體';
+    color:gray;
+}
 .left{
- border-style: solid;
-	border-width: 2px;
-    border-color: rgb(150,150,150);
-    margin:5px;
+    margin-bottom:100px;
 }
-.SEARCH_Search{
-    text-align: center;
-    padding:10px;
-}
-.SEARCH_Search h2{
-    text-align:right;
-    color:white;
-    background:black;
-}
-.searchbar{
-    width:16em;
+.right{
+    background-color:white;
 }
 
-.SEARCH_Filter{
-	text-align: center;
-    padding:10px;
+hr{
+    border:0;
+    height:1px;
+    background-color:gray;
+    color:gray;
+    text-align: center; 
 }
-.SEARCH_Filter h2{
-    text-align:right;
-    color:white;
-    background:black;
+.right hr{
+    border:0;
+    height:1px;
+    background-color:gray;
+    color:gray;
+    text-align: center; 
+    width:80%;
 }
-.days_filter p{
-  margin:0px 0px 0px 21px;
-  letter-spacing: 23px;
-  padding:0px 0px 10px 0px;
+#search {
+  border-style:solid;
+  border-width:1px;
+  border-color:gray;
+  height:32px;
+  margin-top:10px;
+  width: 200px;
+  padding: 10px;
+  float: left;
+}
+#search_text {
+  border-radius: 0px;
+  float:left;
+  margin-top:-10px;
+  margin-left:-10px;
+  width:168px;
+  height:30px;
+  padding:0px 10px 0px 10px;
+  border: none;
+  background: white;
+  color: #000000;
+}
+#sub_btn {
+  margin-top:-11px;
+  margin-right:-10px;
+  float: right;
+  width:30px;
+  height: 30px;
+  cursor: pointer;
+  border: none;
+  background: #990000;
+  color:white;
 }
 
-.type input {
-	display: inline-block;
-	outline: none;
-	cursor: pointer;
-	text-align: center;
-	text-decoration: none;
-	font: 15px/100% Arial, Helvetica, sans-serif;
-	padding: .5em 2em .55em;
-	text-shadow: 0 1px 1px rgba(0,0,0,.3);
-	-webkit-border-radius: .5em; 
-	-moz-border-radius: .5em;
-	border-radius: .5em;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	box-shadow: 0 1px 2px rgba(0,0,0,.2);
-    font-family:'·L³n¥¿¶ÂÅé';
+.Search_days p{
+  letter-spacing:41px;
+  margin-left:8px;
+  margin-top:-10px;
+  margin-bottom:-2px;
+  color:gray;
 }
-.type input:hover {
-	text-decoration: none;
+.days li{
+  display: inline-block;
+  color:gray;
+  font-family:'微軟正黑體';
+  font-size: 12px;
+  margin-right:5px;
 }
-.type input:active {
-	position: relative;
-	top: 1px;
+ input[type='range'] {
+  -webkit-appearance: none;
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px #990000;
+  background-color: #990000;
+  height: 10px;
+  width:200px;
+  vertical-align: middle;
+}
+input[type='range']::-moz-range-track {
+  -moz-appearance: none;
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px #990000;
+  background-color: #990000;
+  height: 10px;
+}
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none !important;
+  border-radius: 20px;
+  background-color: #FFF;
+  box-shadow:inset 0 0 10px #FFF;
+  border: 1px solid gray;
+  height: 20px;
+  width: 20px;
+}
+input[type='range']::-moz-range-thumb {
+  -moz-appearance: none;
+  border-radius: 20px;
+  background-color: #FFF;
+  box-shadow:inset 0 0 10px #FFF;
+  border: 1px solid gray;
+  height: 20px;
+  width: 20px;
+}
+.type{
+  color:gray;
+  border-style: solid;
+  border-color:gray;
+  border-width: 1px;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  font: 15px/100% Arial, Helvetica, sans-serif;
+  padding: 5px 5px 5px 5px;
+  text-shadow: 0 1px 1px rgba(0,0,0,.3);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  font-family:'微軟正黑體';
+  background-color:white;
+  margin:2px;
+}
+.type:visited {
+  position: relative;
+  top: 1px;
+}
+.type:hover {
+  text-decoration: none;
+  background-color: #ebebeb;
+  border-color: #adadad;
+}
+.type:active {
+  position: relative;
+  top: 1px;
 }
 
-.SEARCH_Arrangement{
-	text-align: center;
-    padding:10px;
+.click{
+  border-style: solid;
+  border-color:gray;
+  border-width: 1px;
+  color:white;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  font: 15px/100% Arial, Helvetica, sans-serif;
+  padding: 5px 5px 5px 5px;
+  text-shadow: 0 1px 1px rgba(0,0,0,.3);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  font-family:'微軟正黑體';
+  background-color:#990000;
+  margin:2px;
 }
-.SEARCH_Arrangement h2{
-    text-align:right;
-    color:white;
-    background:black;
+.click:visited {
+  position: relative;
+  top: 1px;
 }
-.SEARCH_Arrangement select{
+.click:hover {
+  text-decoration: none;
+  background-color:rgb(150,30,40);
+  border-color: rgb(160,30,40);
+}
+.click:active {
+  position: relative;
+  top: 1px;
+}
+
+.Search_sort select{
    background: transparent;
-   width: 240px;
-   padding: 5px;
+   margin-left:-5px;
+   margin-top:-25px;
+   width: 200px;
    font-size: 16px;
-   border: 1px solid #ccc;
-   height: 34px;
-   -webkit-appearance: none; 
-   font-family:'·L³n¥¿¶ÂÅé';
-}
-.select {  
-   margin:0px 0px 0px 15px;
-   width: 240px;
+   padding-left:20px;
+   padding-bottom:5px;
+   border-style: solid;
    height: 35px;
+   -webkit-appearance: none;
+   font-family:'微軟正黑體';
+}
+
+.Search_select {
+   padding-top:10px;
+   padding-left:5px;
+   margin:2px 0px 100px 0px;
+   height: 35px;
+   width:170px;
    overflow: hidden;
-   background: url(http://images.cnblogs.com/cnblogs_com/shishm/201203/201203021104209592.jpg) no-repeat right #ddd;
+  background:white;
 }
 
-.SEARCH_Arrangement option{
+.Search_sort option{
   font-size: 15px;
-  font-family:'·L³n¥¿¶ÂÅé';
-}
-
-.search_a{
-  text-decoration:none;
+  font-family:'微軟正黑體';
 }
 
 .search_img{
-  width:400px;
   height:300px;
-  float:left;
-}
-.all{
-  width:700px;
-  height:300px;
-  background-color: rgb(250,250,220);
+  width:100%;
 }
 
-.time{
-  text-align:center;
-  font-size: 15px;
-  background-color: #000000;
+.Search_time{
+  margin-top:10px;
+  font-size: 1.5em;
   color:white;
-  padding:10px 20px 10px 50px;
-} 
-
-.name{
-  font-size: 23px;
-  color:black;
-  font-family:'·L³n¥¿¶ÂÅé';
-  background-color: rgb(250,250,220);
+  background-color:#990000;
+  padding:10px 100px 10px 100px;
 }
-
-.about{
-  font-size: 1em;
-  background-color: rgb(250,250,220);
+.Search_name{
+  padding-left:1.5em;
+  padding-right:1.5em;
   color:black;
-  font-family:'·L³n¥¿¶ÂÅé';
+}
+.Search_select img{
+  float:right;
+  width:30px;
+  height:30px;
+  margin-bottom:-35px;
 }
