--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -191,7 +191,7 @@ ul {
           <ul>
           
               <li class="leftbar" ><a href="ph_profile_history.html">觀點發表紀錄</a></li>
-              <li class="leftbar" ><a href="ph_profile_following.html">following</a>
+              <li class="leftbar" ><a href="ph_profil">追蹤清單</a>
               	<ul>
               	<% @users.each do |user| %>
 					<li class="leftbar" ><%= link_to user.name, user_page_path(user.id) %></li>
@@ -201,22 +201,6 @@ ul {
           </ul>
       
       </div>
-      <div class="content">
-
-          <h1 class="pagename">觀點發表紀錄</h1>
-			<% @posts.each do |post| %>
-          <div class="post_article">
-          
-              <div class="time"><%= post.created_at.strftime("%F") %></div>
-              <div class="btn btn-info"><%= link_to post.hearing_conference.title, hearing_conference_path(post.hearing_conference_id) %></div>
-			  <h2 class="articletitle"><%= link_to post.title, post %></h2>
-              <div class="articlecontent"><%= raw(post.content).truncate(100, :separator => " ").html_safe %>
-              	<span text-align="right"><%= link_to "繼續閱讀→", post%></span></div>
-          
-          </div>
-		<% end %>
-      </div>
-
 
 <div class="row">
 <% @hearingconferences.each do |hearingconference| %>
@@ -226,3 +210,19 @@ ul {
   </div>
 <% end %>
 </div>
+      <div class="content">
+
+          <h1 class="pagename">觀點發表紀錄</h1>
+      <% @posts.each do |post| %>
+          <div class="post_article">
+          
+              <div class="time"><%= post.created_at.strftime("%F") %></div>
+              <div class="btn btn-info"><%= link_to post.hearing_conference.title, hearing_conference_path(post.hearing_conference_id) %></div>
+        <h2 class="articletitle"><%= link_to post.title, post %></h2>
+              <div class="articlecontent"><%= raw(post.content).truncate(100, :separator => " ").html_safe %>
+                <span text-align="right"><%= link_to "繼續閱讀→", post%></span></div>
+          
+          </div>
+    <% end %>
+      </div>
+
