--- a/app/views/main/search.html.erb
+++ b/app/views/main/search.html.erb
@@ -9,7 +9,7 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
 <div class="container">
-  <div class="col-md-3 col-lg-3" id="left">
+  <div class="col-md-4" id="left">
     <div class="row">
       <div class="col-md-12">
         <p><h3 class="search_h3">關鍵字搜尋</h3></p>
@@ -73,8 +73,8 @@
       </div>
     </div>
   </div>
-  <div class="col-md-9 right">
-    <a href="http://lis.ly.gov.tw/pubhearc/ttsbooki?N101473:0117-0176:_self">
+  <div class="col-md-8 right">
+    <a href="http://lis.ly.gov.tw/pubhearc/ttsbooki?N101473:0117-0176:_self" class="search_a">
       <div class="row">
         <div class="col-md-6 col-lg-6 col-sm-6">
           <img src="http://payload208.cargocollective.com/1/11/380934/6468832/Untitled-3.png" class="img-rounded search_img">
@@ -82,12 +82,12 @@
         <div class="col-md-6 col-lg-6 col-sm-6 Search_listen">
           <div class="Search_time text-center"><strong>三天後！</strong></div>
           <h3 class="Search_name search_h3"><strong>「海峽兩岸服務貿易協定」第三場公聽會</strong></h3>
-          <p class="Search_about ">戰役時間：<br>戰役地點：立法院群賢樓九樓大禮堂<br>對手陣營：<br>戰役主持：江召集委員起臣</p>
+          <p>戰役時間：<br>戰役地點：立法院群賢樓九樓大禮堂<br>對手陣營：<br>戰役主持：江召集委員起臣</p>
         </div>
       </div>
     </a>
     <hr>
-    <a href="http://lis.ly.gov.tw/pubhearc/ttsbooki?N101473:0117-0176:_self">
+    <a href="http://lis.ly.gov.tw/pubhearc/ttsbooki?N101473:0117-0176:_self" class="search_a">
       <div class="row">
         <div class="col-md-6">
           <img src="http://payload208.cargocollective.com/1/11/380934/6468832/Untitled-3.png" class="img-rounded search_img">
@@ -95,7 +95,7 @@
         <div class="col-md-6 Search_listen">
           <div class="Search_time text-center"><strong>三天後！</strong></div>
           <h3 class="Search_name search_h3"><strong>「自由經濟示範區特別條例草案」第五次公聽會</strong></h3>
-          <p class="Search_about ">戰役時間：04/14 18：00<br>戰役地點：立法院<br>對手陣營：立法院經濟委員會<br>戰役主持：葉津鈴</p>
+          <p>戰役時間：04/14 18：00<br>戰役地點：立法院<br>對手陣營：立法院經濟委員會<br>戰役主持：葉津鈴</p>
         </div>
       </div>
     </a>
