--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,26 +1,21 @@
 <%# add navigation links to this file %>
 <style>
 .navbar-text {
-  /*margin: 0 auto;*/
-  /*top:0px;*/
+  margin: 0 auto;
+  top:0px;
 }
 
 .navbar .nav > li > a {
-/*  min-height: 72px;
-  margin: 0 auto;*/
-  /*height: 72px;*/
+  min-height: 71px;
+  height: 71px;
 }
 
 .nav li a {
- /*margin: 0 auto;*/
- /*text-align: center;*/
- /*vertical-align: middle;*/
- /*padding: 23px 10px 23px 10px;*/
+ padding: 23px 10px 23px 10px;
 }
 
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
- /*max-height: 72px;*/
- /*height: 72px;*/
+ max-height: 71px;
 }
 
 </style> 
@@ -58,9 +53,6 @@ function WidthChange(mq) {
       $("#logo").css("padding-top","0px");
       $(".navbar-collapse").removeAttr('style');
       $(".navbar-brand").css({"width":"150px","height":"40px","padding":"10px 15px 10px 15px",});
-
-      console.log("OMG");
-
   }
   else {
     // window width is less than 768px
@@ -69,7 +61,7 @@ function WidthChange(mq) {
       $("#logo").css("padding-top","13px");
       $(".navbar-brand").parent().css("height","40px");
       $(".navbar-brand").css({"width":"150px","height":"40px","padding":"10px 15px 10px 15px",});
-      // $(".navbar-collapse").attr("style","max-height: 340px; height: 72px");
+      $(".navbar-collapse").attr("style","max-height: 340px; ");
   }
 
 }
