--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -102,3 +102,45 @@ h1{
 .tag:hover::after {
    border-left-color: crimson; 
 }
+@media screen and( min-width: 762px){
+  .conference_title{
+    position: absolute;
+    bottom: 50px;
+    width: 100%;
+    font-size: 50px;
+    display: inline-block;
+  }
+  .conference_subtitle{
+    font-size: 40px;
+    margin-left: 10px;
+    display: inline-block;
+  }
+}
+@media screen and( min-width: 460px){
+  .conference_title{
+    font-size: 35px;
+    position: absolute;
+    bottom: 50px;
+    width: 100%;
+    display: inline-block;
+  }
+  .conference_subtitle{
+    font-size: 25px;
+    margin-left: 10px;
+    display: inline-block;
+  }
+}
+@media screen and( max-width: 458px){
+  .conference_title{
+    font-size: 20px;
+    position: absolute;
+    bottom: 50px;
+    width: 100%;
+    display: inline-block;
+  }
+  .conference_subtitle{
+    font-size: 15px;
+    margin-left: 10px;
+    display: inline-block;
+  }
+}
