--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -52,10 +52,11 @@ table {
 }
 
 body{
-	padding-top: 60px;
+	  padding-top: 60px;
     max-width: 1024px;
     margin: 0 auto;
     font-family: 微軟正黑體;
+    background-image: url("http://subtlepatterns.com/patterns/ricepaper2.png");
 }
     
 .sidebar{
