--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -24,8 +24,9 @@ a {
     color: #666;
   }
   &:hover {
-    color: #fff;
-    background-color: #000;
+    opacity:0.6;
+    background-color: #A4C5C2;
+    text-decoration: none;
   }
 }
 
