--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -49,7 +49,6 @@ hr{
   margin-top:-11px;
   margin-right:-10px;
   float: right;
-  width:30px;
   height: 30px;
   cursor: pointer;
   border: none;
@@ -208,6 +207,7 @@ input[type='range']::-moz-range-thumb {
 }
 
 .search_img{
+  margin-top: 10px;
   height:251px;
   width:335px;
 }
@@ -230,5 +230,8 @@ input[type='range']::-moz-range-thumb {
   margin-bottom:-35px;
 }
 .search_a:hover{
+  color: black;
+}
+.search_p{
   color: black;
 }
