--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,40 +1,35 @@
 <%# add navigation links to this file %>
 <style>
 .navbar-text {
-  /*margin: 0 auto;*/
-  /*top:0px;*/
+  margin: 0 auto;
+  top:0px;
 }
 
 .navbar .nav > li > a {
-/*  min-height: 72px;
-  margin: 0 auto;*/
-  /*height: 72px;*/
+  min-height: 71px;
+  height: 71px;
 }
 
 .nav li a {
- /*margin: 0 auto;*/
- /*text-align: center;*/
- /*vertical-align: middle;*/
- /*padding: 23px 10px 23px 10px;*/
+ padding: 23px 10px 23px 10px;
+ margin: 0 5px 0 5px;
 }
 
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
- /*max-height: 72px;*/
- /*height: 72px;*/
+ max-height: 71px;
 }
+</style>
 
-</style> 
-
-      <li><%= link_to "公聽會搜尋", search_path %></li>
-      <li><%= link_to "戰況分析", posts_path %></li>
-      <li><%= link_to image_tag('logo.png', id: "logo"), root_path, class: 'navbar-brand' %></li>
-	    <li><%= link_to "消息通報", report_path, id: "report"%></li>
+      <li><a href="/search"><span class="glyphicon glyphicon-search"></span>前哨站記錄</a></li>
+      <li><a href="/posts"><span class="glyphicon glyphicon-pencil"></span>戰況分析</a></li>
+      <li><%= link_to image_tag('logo-03.png', id: "logo"), root_path, class: 'navbar-brand' %></li>
+	    <li><a href="/report" id="report"><span class="glyphicon glyphicon-bullhorn"></span>情資回報</a></li>
           
 	  <% if current_user %>
         <p class="navbar-text"><strong><%= link_to current_user.name, user_page_path(current_user.id) %></strong>軍師你好!<br><%= image_tag current_user.image, style: "display:inline-block" %>
         <%= link_to "登出", signout_path, id: "sign_out" %></p>
     <% else %>
-        <li><%= link_to "facebook登入", "/auth/facebook", id: "sign_in" %></li>
+        <li><i class="fa fa-facebook-square"></i><%= link_to "加入作戰", "/auth/facebook", id: "sign_in", style: "display:inline-block" %></li>
     <% end %>
 
 
@@ -43,7 +38,6 @@ var mq = window.matchMedia( "(min-width: 768px)" );
 
 // media query event handler
 if (matchMedia) {
-  var mq = window.matchMedia("(min-width: 768px)");
   mq.addListener(WidthChange);
   WidthChange(mq);
 }
@@ -53,14 +47,11 @@ function WidthChange(mq) {
 
   if (mq.matches) {
     // window width is at least 768px
-      $("#logo").attr("src","<%=asset_path('logo.png')%>");
+      $("#logo").attr("src","<%=asset_path('logo-03.png')%>");
       $("#logo").attr("alt",'');
-      $("#logo").css("padding-top","0px");
+      $("#logo").css("padding-top","5px");
       $(".navbar-collapse").removeAttr('style');
-      $(".navbar-brand").css({"width":"150px","height":"40px","padding":"10px 15px 10px 15px",});
-
-      console.log("OMG");
-
+      $(".navbar-brand").css({"width":"216px","height":"71px","padding":"10px 15px 10px 15px",});
   }
   else {
     // window width is less than 768px
@@ -69,9 +60,9 @@ function WidthChange(mq) {
       $("#logo").css("padding-top","13px");
       $(".navbar-brand").parent().css("height","40px");
       $(".navbar-brand").css({"width":"150px","height":"40px","padding":"10px 15px 10px 15px",});
-      // $(".navbar-collapse").attr("style","max-height: 340px; height: 72px");
+      $(".navbar-collapse").attr("style","max-height: 340px; ");
   }
 
 }
-</script>    
+</script> 
 
