--- a/app/views/main/search.html.erb
+++ b/app/views/main/search.html.erb
@@ -64,10 +64,10 @@
           <div class="dropdown">
                   <a href="#" data-toggle="dropdown" class="dropdown-toggle"><h3 class="search_h3">排序方式<b class="glyphicon glyphicon-chevron-down"></b></h3> </a>
                 <ul class="dropdown-menu">
-                    <li><%= link_to "時間(順排)", search_path(params[:order]="happen_date DESC"), remote: true %></li>
-                    <li><%= link_to "時間(逆排)", search_path(params[:order]="happen_date ASC"), remote: true %></li>
-                    <li><%= link_to "人氣(順排)", search_path(params[:order]="count DESC"), remote: true %></li>
-                    <li><%= link_to "人氣(逆排)", search_path(params[:order]="count DESC"), remote: true %></li>
+                    <li><%= link_to "時間(順排)", :order => "happen_date DESC", remote: true %></li>
+                    <li><%= link_to "時間(逆排)", :order => "happen_date ASC", remote: true %></li>
+                    <li><%= link_to "人氣(順排)", :order => "count DESC", remote: true %></li>
+                    <li><%= link_to "人氣(逆排)", :order => "count DESC", remote: true %></li>
                 </ul>
             </div>
         </div>
